# python-comment-sentiment-analysis-cli

./: .gitattributes  .gitignore  AI_USAGE.md  README.md  app.py  exercise_intensity_judger.py  pyproject.toml  requirements.txt  学习说明.md
.github/workflows/: tests.yml
2组 张跃骞 20241034145/: 2组 张跃骞 第一次上机作业.docx
2组 张跃骞20241034145/: 2组 张跃骞 第二次上机作业.docx  book_list.py
data/: INDEPENDENT_TESTSET.md  independent_test_comments.csv  labeled_comments.csv  sample_comments.csv  stopwords.txt
docs/example_outputs/: classified_comments.csv  evaluation_metadata.json  evaluation_report.txt  evaluation_results.json  summary.txt
docs/superpowers/plans/: 2026-07-04-comment-sentiment-cli.md  2026-07-13-book-list-program.md
docs/superpowers/specs/: 2026-07-04-comment-sentiment-cli-design.md  2026-07-13-book-list-program-design.md  2026-07-13-book-reading-status-design.md
outputs/: classified_comments.csv  evaluation_report.txt  summary.txt
src/sentiment_cli/: __init__.py  analyzer.py  data_validation.py  evaluate.py  inference.py  main.py  ml_model.py  train.py  ui_helpers.py
tests/: test_analyzer.py  test_book_list.py  test_data_validation.py  test_evaluate.py  test_exercise_intensity_judger.py  test_inference.py  test_main.py  test_ml_model.py  test_streamlit_app.py  test_train.py  test_ui_helpers.py
