[project]
name = "network-comment-sentiment-cli"
version = "0.1.0"
description = "A command-line and Streamlit network comment sentiment analysis system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jieba>=0.42.1",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "streamlit>=1.38",
]

[project.scripts]
comment-sentiment = "sentiment_cli.main:main"
comment-sentiment-train = "sentiment_cli.train:main"
comment-sentiment-evaluate = "sentiment_cli.evaluate:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
